# evo_result_analysis

./: .gitignore  README.md  pyproject.toml
src/analysis/: __init__.py  analyze_mapping.py  analyze_mutations.py  candidate_selection.py  compare_analysis_results.py  compare_methods.py  genomic_annotation.py  sequence_processing.py  simple_result_stats.py  starrseq_analysis.py  summarize_mutations.py  update_excel_sheet.py
src/workflows/hoffie/: README.md  compare_predictions_SSR_MSR.py  create_filtered_sequences.py  hoffie.py  select_best_candidate_and_merge_into_plasmid.py
test/: test.py  test_analyze_mapping.py  test_analyze_mutations.py  test_candidate_selection.py  test_compare_analysis_results.py  test_compare_methods.py  test_genomic_annotation.py  test_simple_result_stats.py  test_summarize_mutations.py
