[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis", "src/workflows"]

[project]
name = "analysis"
version = "0.0.1"
authors = [
  { name="Gernot Schmitz", email="g.schmitz@fz-juelich.de" },
]
description = "A package for analyzing evolutionary algorithm results"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "tqdm"
]
